scss/custom/_navbar-fullscreen.scss
/* ... */
/* stylelint-disable selector-max-id */
#navbar-az-fullscreen-nav-mobile-col {
  --az-navbar-fullscreen-back-icon: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='42' height='42' viewBox='0 0 42 42'><g transform='translate(1 1)'><circle fill='none' stroke='#{$white}' stroke-width='2' cx='20' cy='20' r='20' transform='translate(0 40) rotate(-90)'/><path fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' d='M-23110.98-11472l10,10-10,10' transform='translate(23127.197 11482)'/></g></svg>"))};
  --az-navbar-fullscreen-back-icon-hover: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='41.88' height='41.88' viewBox='0 0 41.88 41.88'><circle fill='none' stroke='#{$sky}' stroke-width='3' cx='20.94' cy='20.94' r='19.44'/><path fill='none' stroke='#{$sky}' stroke-width='3' stroke-linecap='round' d='M17.26 11.22l9.72 9.72-9.72 9.72'/></svg>"))};
  // https://fonts.google.com/icons?icon.style=Rounded&icon.set=Material+Symbols&icon.size=24&icon.color=%23AB0520&selected=Material+Symbols+Rounded:expand_circle_down:FILL@1;wght@400;GRAD@0;opsz@24&icon.query=expand+ci
  --az-navbar-fullscreen-back-icon-active: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='#{$sky}'><path d='m480-453-95-95q-11-11-27.5-11T329-548q-12 12-12 28.5t12 28.5l123 123q12 12 28 12t28-12l124-124q12-12 11.5-28T631-548q-12-11-28-11.5T575-548l-95 95Zm0 373q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z'/></svg>"))};
  // https://fonts.google.com/icons?icon.style=Rounded&icon.set=Material+Symbols&icon.size=24&icon.color=%23AB0520&selected=Material+Symbols+Rounded:expand_circle_down:FILL@0;wght@400;GRAD@0;opsz@24&icon.query=expand+ci
  --az-navbar-fullscreen-back-icon-active-child: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='#{$sky}'><path d='m480-453-95-95q-11-11-27.5-11T329-548q-12 12-12 28.5t12 28.5l123 123q12 12 28 12t28-12l124-124q12-12 11.5-28T631-548q-12-11-28-11.5T575-548l-95 95Zm0 373q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z'/></svg>"))};

  .navbar-az-fullscreen-actions {
    --bs-nav-link-padding-y: 12px;

    .nav-item:not(:last-child) > .nav-link {
      top: 0;
      bottom: 0;
    }

    .nav-link {
      padding: 0 30px;
      font-size: 20px;
      line-height: 38px;
      color: var(--bs-sky);

      &::after {
        top: 0;
        bottom: 0;
      }
    }
  }

  .navbar-az-fullscreen-modal-menu-nav-col {
    padding-top: 0;
    border-right: 0;
  }

  .nav.navbar-az-fullscreen-nav-primary {
    --az-navbar-fullscreen-nav-toggle-size: 38px;
    --az-navbar-fullscreen-nav-toggle-separator-offset: 20px;
    --az-navbar-fullscreen-nav-toggle-padding-y: 6px;
    margin-right: 0;
    margin-left: 0;
    border-top: 2px solid var(--az-navbar-fullscreen-modal-menu-separator-color);
    border-bottom: 2px solid var(--az-navbar-fullscreen-modal-menu-separator-color);

    .nav-item:not(:last-child) {
      border-width: 2px;
    }

    .nav-link {
      padding-top: 16px;
      padding-bottom: 16px;
      font-size: 38px;
      line-height: 1em;
      letter-spacing: .38px;
    }
  }

  .navbar-az-fullscreen-modal-menu-nav-col-secondary,
  .navbar-az-fullscreen-modal-menu-nav-col-tertiary {
    --az-navbar-fullscreen-nav-toggle-size: 38px;
    --az-navbar-fullscreen-nav-toggle-separator-offset: 20px;
    --az-navbar-fullscreen-nav-toggle-padding-y: 6px;
    padding-top: 0;
    border-right: 0;

    .nav {
      margin-right: 0;
      margin-left: 0;
      border-top: 1px solid var(--az-navbar-fullscreen-modal-menu-separator-color);
      border-bottom: 1px solid var(--az-navbar-fullscreen-modal-menu-separator-color);
    }

    .nav-link {
      font-size: 18px;
      line-height: 22px;
      letter-spacing: .36px;
    }
  }

  .navbar-az-fullscreen-nav-secondary {
    width: unset;

    .nav-link {
      padding-right: 0;
      padding-left: 0;
      font-size: 18px;
    }

    .nav-toggle {
      padding: 0 0 0 12px;
    }

    .nav-toggle-icon {
      width: 42px;
      height: 42px;
    }

    hr {
      margin-right: 0;
      margin-left: 0;
    }
  }

  .navbar-az-fullscreen-nav-back {
    margin-top: 16px;
    margin-bottom: 16px;
  }

  .navbar-az-fullscreen-nav-back-btn {
    display: inline-flex;
    align-items: center;
    padding: 8px 16px 8px 0;
    color: var(--bs-white);
    border: 0;

    &::before {
      display: inline-block;
      -ms-flex-negative: 0;
      flex-shrink: 0;
      inline-size: 30px;
      width: 30px;
      block-size: 30px;
      height: 30px;
      vertical-align: bottom;
      content: "";
      background-image: var(--az-navbar-fullscreen-back-icon);
      background-repeat: no-repeat;
      background-position: center;
      background-size: 100% 100%;
      border: 0;
      transform: rotate(180deg);
    }

    &:hover::before {
      background-image: var(--az-navbar-fullscreen-back-icon-hover);
    }

    span {
      height: 18px;
      padding-left: 8px;
      font-family: proxima-nova-condensed, #{$font-family-sans-serif};
      font-size: 18px;
      line-height: 21px;
      letter-spacing: .36px;
    }
  }

  .nav-toggle-icon {
    pointer-events: none;
  }

  .nav-toggle:not(.collapsed) .nav-toggle-icon {
    transform: none;
  }
}
/* ... */

